Fix website logo on mobile

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -76,9 +76,10 @@ video {
 }
 
 #logo {
-    height: 50%;
-    width: auto;
-
+	max-height: 50%;
+	max-width: 90%;
+	width: auto;
+	
     animation: rotation 4s infinite ease-in-out;
     -webkit-animation: rotation 4s infinite ease-in-out;
 }
